crates/telemetry-adapters/tests/snapshots/snapshots_games_v7__raceroom_realistic_snapshot.snap
---
source: crates/telemetry-adapters/tests/snapshots_games_v7.rs
expression: normalized
---
speed_ms: 52
steering_angle: -0.12
throttle: 0.8
brake: 0
clutch: 0
rpm: 6800
max_rpm: 9000
gear: 5
num_gears: 0
lateral_g: -0
longitudinal_g: -0
vertical_g: 0
slip_ratio: 0
slip_angle_fl: 0
slip_angle_fr: 0
slip_angle_rl: 0
slip_angle_rr: 0
tire_temps_c:
  - 0
  - 0
  - 0
  - 0
tire_pressures_psi:
  - 0
  - 0
  - 0
  - 0
ffb_scalar: 0
ffb_torque_nm: 0
flags:
  yellow_flag: false
  red_flag: false
  blue_flag: false
  checkered_flag: false
  green_flag: false
  pit_limiter: false
  in_pits: false
  drs_available: false
  drs_active: false
  ers_available: false
  ers_active: false
  launch_control: false
  traction_control: false
  abs_active: false
  engine_limiter: false
  safety_car: false
  formation_lap: false
  session_paused: false
position: 0
lap: 0
current_lap_time_s: 0
best_lap_time_s: 0
last_lap_time_s: 0
delta_ahead_s: 0
delta_behind_s: 0
fuel_percent: 0.5
engine_temp_c: 0
extended:
  fuel_capacity_l:
    type: Float
    value: 50
  fuel_left_l:
    type: Float
    value: 25
sequence: 0
