crates/telemetry-adapters/tests/snapshots/snapshots_games_v7__rfactor2_normalized_snapshot.snap
---
source: crates/telemetry-adapters/tests/snapshots_games_v7.rs
assertion_line: 179
expression: normalized
---
speed_ms: 55
steering_angle: 0
throttle: 0
brake: 0
clutch: 0
rpm: 9500
max_rpm: 0
gear: 5
num_gears: 0
lateral_g: 0
longitudinal_g: 0
vertical_g: 0
slip_ratio: 0.06
slip_angle_fl: 0
slip_angle_fr: 0
slip_angle_rl: 0
slip_angle_rr: 0
tire_temps_c:
  - 0
  - 0
  - 0
  - 0
tire_pressures_psi:
  - 0
  - 0
  - 0
  - 0
ffb_scalar: 0.75
ffb_torque_nm: 0
flags:
  yellow_flag: false
  red_flag: false
  blue_flag: false
  checkered_flag: false
  green_flag: true
  pit_limiter: false
  in_pits: false
  drs_available: false
  drs_active: false
  ers_available: false
  ers_active: false
  launch_control: false
  traction_control: false
  abs_active: false
  engine_limiter: false
  safety_car: false
  formation_lap: false
  session_paused: false
car_id: Dallara_IR18
track_id: Spa-Francorchamps
position: 0
lap: 0
current_lap_time_s: 0
best_lap_time_s: 0
last_lap_time_s: 0
delta_ahead_s: 0
delta_behind_s: 0
fuel_percent: 0
engine_temp_c: 0
extended:
  brake:
    type: Float
    value: 0
  clutch:
    type: Float
    value: 0
  ffb_raw:
    type: Float
    value: 0.75
  ffb_source:
    type: String
    value: telemetry_steering_shaft_torque
  fuel_level:
    type: Float
    value: 28
  oil_temp:
    type: Float
    value: 105
  steering:
    type: Float
    value: 0.1
  throttle:
    type: Float
    value: 0.85
  water_temp:
    type: Float
    value: 92
sequence: 0
